; ModuleID = '/home/carl/AnghaBench/sqlcipher/test/extr_speedtest1.c_speedtest1_numbername.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/test/extr_speedtest1.c_speedtest1_numbername.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@speedtest1_numbername.ones = internal global [20 x i8*] [i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.19, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [5 x i8] c"zero\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"one\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"two\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"three\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"four\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"five\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"six\00", align 1
@.str.7 = private unnamed_addr constant [6 x i8] c"seven\00", align 1
@.str.8 = private unnamed_addr constant [6 x i8] c"eight\00", align 1
@.str.9 = private unnamed_addr constant [5 x i8] c"nine\00", align 1
@.str.10 = private unnamed_addr constant [4 x i8] c"ten\00", align 1
@.str.11 = private unnamed_addr constant [7 x i8] c"eleven\00", align 1
@.str.12 = private unnamed_addr constant [7 x i8] c"twelve\00", align 1
@.str.13 = private unnamed_addr constant [9 x i8] c"thirteen\00", align 1
@.str.14 = private unnamed_addr constant [9 x i8] c"fourteen\00", align 1
@.str.15 = private unnamed_addr constant [8 x i8] c"fifteen\00", align 1
@.str.16 = private unnamed_addr constant [8 x i8] c"sixteen\00", align 1
@.str.17 = private unnamed_addr constant [10 x i8] c"seventeen\00", align 1
@.str.18 = private unnamed_addr constant [9 x i8] c"eighteen\00", align 1
@.str.19 = private unnamed_addr constant [9 x i8] c"nineteen\00", align 1
@speedtest1_numbername.tens = internal global [10 x i8*] [i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.28, i32 0, i32 0)], align 16
@.str.20 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.21 = private unnamed_addr constant [7 x i8] c"twenty\00", align 1
@.str.22 = private unnamed_addr constant [7 x i8] c"thirty\00", align 1
@.str.23 = private unnamed_addr constant [6 x i8] c"forty\00", align 1
@.str.24 = private unnamed_addr constant [6 x i8] c"fifty\00", align 1
@.str.25 = private unnamed_addr constant [6 x i8] c"sixty\00", align 1
@.str.26 = private unnamed_addr constant [8 x i8] c"seventy\00", align 1
@.str.27 = private unnamed_addr constant [7 x i8] c"eighty\00", align 1
@.str.28 = private unnamed_addr constant [7 x i8] c"ninety\00", align 1
@.str.29 = private unnamed_addr constant [9 x i8] c" billion\00", align 1
@.str.30 = private unnamed_addr constant [9 x i8] c" million\00", align 1
@.str.31 = private unnamed_addr constant [10 x i8] c" thousand\00", align 1
@.str.32 = private unnamed_addr constant [11 x i8] c"%s hundred\00", align 1
@.str.33 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @speedtest1_numbername(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp uge i32 %8, 1000000000
  br i1 %9, label %10, label %41

10:                                               ; preds = %3
  %11 = load i32, i32* %4, align 4
  %12 = udiv i32 %11, 1000000000
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* %7, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i8, i8* %13, i64 %15
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = sub nsw i32 %17, %18
  %20 = call i32 @speedtest1_numbername(i32 %12, i8* %16, i32 %19)
  %21 = load i32, i32* %7, align 4
  %22 = add nsw i32 %21, %20
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = sub nsw i32 %23, %24
  %26 = load i8*, i8** %5, align 8
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i8, i8* %26, i64 %28
  %30 = call i32 (i32, i8*, i8*, ...) @sqlite3_snprintf(i32 %25, i8* %29, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.29, i64 0, i64 0))
  %31 = load i8*, i8** %5, align 8
  %32 = load i32, i32* %7, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i8, i8* %31, i64 %33
  %35 = call i64 @strlen(i8* %34)
  %36 = trunc i64 %35 to i32
  %37 = load i32, i32* %7, align 4
  %38 = add nsw i32 %37, %36
  store i32 %38, i32* %7, align 4
  %39 = load i32, i32* %4, align 4
  %40 = urem i32 %39, 1000000000
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %10, %3
  %42 = load i32, i32* %4, align 4
  %43 = icmp uge i32 %42, 1000000
  br i1 %43, label %44, label %89

44:                                               ; preds = %41
  %45 = load i32, i32* %7, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %58

47:                                               ; preds = %44
  %48 = load i32, i32* %7, align 4
  %49 = load i32, i32* %6, align 4
  %50 = sub nsw i32 %49, 1
  %51 = icmp slt i32 %48, %50
  br i1 %51, label %52, label %58

52:                                               ; preds = %47
  %53 = load i8*, i8** %5, align 8
  %54 = load i32, i32* %7, align 4
  %55 = add nsw i32 %54, 1
  store i32 %55, i32* %7, align 4
  %56 = sext i32 %54 to i64
  %57 = getelementptr inbounds i8, i8* %53, i64 %56
  store i8 32, i8* %57, align 1
  br label %58

58:                                               ; preds = %52, %47, %44
  %59 = load i32, i32* %4, align 4
  %60 = udiv i32 %59, 1000000
  %61 = load i8*, i8** %5, align 8
  %62 = load i32, i32* %7, align 4
  %63 = sext i32 %62 to i64
  %64 = getelementptr inbounds i8, i8* %61, i64 %63
  %65 = load i32, i32* %6, align 4
  %66 = load i32, i32* %7, align 4
  %67 = sub nsw i32 %65, %66
  %68 = call i32 @speedtest1_numbername(i32 %60, i8* %64, i32 %67)
  %69 = load i32, i32* %7, align 4
  %70 = add nsw i32 %69, %68
  store i32 %70, i32* %7, align 4
  %71 = load i32, i32* %6, align 4
  %72 = load i32, i32* %7, align 4
  %73 = sub nsw i32 %71, %72
  %74 = load i8*, i8** %5, align 8
  %75 = load i32, i32* %7, align 4
  %76 = sext i32 %75 to i64
  %77 = getelementptr inbounds i8, i8* %74, i64 %76
  %78 = call i32 (i32, i8*, i8*, ...) @sqlite3_snprintf(i32 %73, i8* %77, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.30, i64 0, i64 0))
  %79 = load i8*, i8** %5, align 8
  %80 = load i32, i32* %7, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i8, i8* %79, i64 %81
  %83 = call i64 @strlen(i8* %82)
  %84 = trunc i64 %83 to i32
  %85 = load i32, i32* %7, align 4
  %86 = add nsw i32 %85, %84
  store i32 %86, i32* %7, align 4
  %87 = load i32, i32* %4, align 4
  %88 = urem i32 %87, 1000000
  store i32 %88, i32* %4, align 4
  br label %89

89:                                               ; preds = %58, %41
  %90 = load i32, i32* %4, align 4
  %91 = icmp uge i32 %90, 1000
  br i1 %91, label %92, label %137

92:                                               ; preds = %89
  %93 = load i32, i32* %7, align 4
  %94 = icmp ne i32 %93, 0
  br i1 %94, label %95, label %106

95:                                               ; preds = %92
  %96 = load i32, i32* %7, align 4
  %97 = load i32, i32* %6, align 4
  %98 = sub nsw i32 %97, 1
  %99 = icmp slt i32 %96, %98
  br i1 %99, label %100, label %106

100:                                              ; preds = %95
  %101 = load i8*, i8** %5, align 8
  %102 = load i32, i32* %7, align 4
  %103 = add nsw i32 %102, 1
  store i32 %103, i32* %7, align 4
  %104 = sext i32 %102 to i64
  %105 = getelementptr inbounds i8, i8* %101, i64 %104
  store i8 32, i8* %105, align 1
  br label %106

106:                                              ; preds = %100, %95, %92
  %107 = load i32, i32* %4, align 4
  %108 = udiv i32 %107, 1000
  %109 = load i8*, i8** %5, align 8
  %110 = load i32, i32* %7, align 4
  %111 = sext i32 %110 to i64
  %112 = getelementptr inbounds i8, i8* %109, i64 %111
  %113 = load i32, i32* %6, align 4
  %114 = load i32, i32* %7, align 4
  %115 = sub nsw i32 %113, %114
  %116 = call i32 @speedtest1_numbername(i32 %108, i8* %112, i32 %115)
  %117 = load i32, i32* %7, align 4
  %118 = add nsw i32 %117, %116
  store i32 %118, i32* %7, align 4
  %119 = load i32, i32* %6, align 4
  %120 = load i32, i32* %7, align 4
  %121 = sub nsw i32 %119, %120
  %122 = load i8*, i8** %5, align 8
  %123 = load i32, i32* %7, align 4
  %124 = sext i32 %123 to i64
  %125 = getelementptr inbounds i8, i8* %122, i64 %124
  %126 = call i32 (i32, i8*, i8*, ...) @sqlite3_snprintf(i32 %121, i8* %125, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.31, i64 0, i64 0))
  %127 = load i8*, i8** %5, align 8
  %128 = load i32, i32* %7, align 4
  %129 = sext i32 %128 to i64
  %130 = getelementptr inbounds i8, i8* %127, i64 %129
  %131 = call i64 @strlen(i8* %130)
  %132 = trunc i64 %131 to i32
  %133 = load i32, i32* %7, align 4
  %134 = add nsw i32 %133, %132
  store i32 %134, i32* %7, align 4
  %135 = load i32, i32* %4, align 4
  %136 = urem i32 %135, 1000
  store i32 %136, i32* %4, align 4
  br label %137

137:                                              ; preds = %106, %89
  %138 = load i32, i32* %4, align 4
  %139 = icmp uge i32 %138, 100
  br i1 %139, label %140, label %178

140:                                              ; preds = %137
  %141 = load i32, i32* %7, align 4
  %142 = icmp ne i32 %141, 0
  br i1 %142, label %143, label %154

143:                                              ; preds = %140
  %144 = load i32, i32* %7, align 4
  %145 = load i32, i32* %6, align 4
  %146 = sub nsw i32 %145, 1
  %147 = icmp slt i32 %144, %146
  br i1 %147, label %148, label %154

148:                                              ; preds = %143
  %149 = load i8*, i8** %5, align 8
  %150 = load i32, i32* %7, align 4
  %151 = add nsw i32 %150, 1
  store i32 %151, i32* %7, align 4
  %152 = sext i32 %150 to i64
  %153 = getelementptr inbounds i8, i8* %149, i64 %152
  store i8 32, i8* %153, align 1
  br label %154

154:                                              ; preds = %148, %143, %140
  %155 = load i32, i32* %6, align 4
  %156 = load i32, i32* %7, align 4
  %157 = sub nsw i32 %155, %156
  %158 = load i8*, i8** %5, align 8
  %159 = load i32, i32* %7, align 4
  %160 = sext i32 %159 to i64
  %161 = getelementptr inbounds i8, i8* %158, i64 %160
  %162 = load i32, i32* %4, align 4
  %163 = udiv i32 %162, 100
  %164 = zext i32 %163 to i64
  %165 = getelementptr inbounds [20 x i8*], [20 x i8*]* @speedtest1_numbername.ones, i64 0, i64 %164
  %166 = load i8*, i8** %165, align 8
  %167 = call i32 (i32, i8*, i8*, ...) @sqlite3_snprintf(i32 %157, i8* %161, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.32, i64 0, i64 0), i8* %166)
  %168 = load i8*, i8** %5, align 8
  %169 = load i32, i32* %7, align 4
  %170 = sext i32 %169 to i64
  %171 = getelementptr inbounds i8, i8* %168, i64 %170
  %172 = call i64 @strlen(i8* %171)
  %173 = trunc i64 %172 to i32
  %174 = load i32, i32* %7, align 4
  %175 = add nsw i32 %174, %173
  store i32 %175, i32* %7, align 4
  %176 = load i32, i32* %4, align 4
  %177 = urem i32 %176, 100
  store i32 %177, i32* %4, align 4
  br label %178

178:                                              ; preds = %154, %137
  %179 = load i32, i32* %4, align 4
  %180 = icmp uge i32 %179, 20
  br i1 %180, label %181, label %219

181:                                              ; preds = %178
  %182 = load i32, i32* %7, align 4
  %183 = icmp ne i32 %182, 0
  br i1 %183, label %184, label %195

184:                                              ; preds = %181
  %185 = load i32, i32* %7, align 4
  %186 = load i32, i32* %6, align 4
  %187 = sub nsw i32 %186, 1
  %188 = icmp slt i32 %185, %187
  br i1 %188, label %189, label %195

189:                                              ; preds = %184
  %190 = load i8*, i8** %5, align 8
  %191 = load i32, i32* %7, align 4
  %192 = add nsw i32 %191, 1
  store i32 %192, i32* %7, align 4
  %193 = sext i32 %191 to i64
  %194 = getelementptr inbounds i8, i8* %190, i64 %193
  store i8 32, i8* %194, align 1
  br label %195

195:                                              ; preds = %189, %184, %181
  %196 = load i32, i32* %6, align 4
  %197 = load i32, i32* %7, align 4
  %198 = sub nsw i32 %196, %197
  %199 = load i8*, i8** %5, align 8
  %200 = load i32, i32* %7, align 4
  %201 = sext i32 %200 to i64
  %202 = getelementptr inbounds i8, i8* %199, i64 %201
  %203 = load i32, i32* %4, align 4
  %204 = udiv i32 %203, 10
  %205 = zext i32 %204 to i64
  %206 = getelementptr inbounds [10 x i8*], [10 x i8*]* @speedtest1_numbername.tens, i64 0, i64 %205
  %207 = load i8*, i8** %206, align 8
  %208 = call i32 (i32, i8*, i8*, ...) @sqlite3_snprintf(i32 %198, i8* %202, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.33, i64 0, i64 0), i8* %207)
  %209 = load i8*, i8** %5, align 8
  %210 = load i32, i32* %7, align 4
  %211 = sext i32 %210 to i64
  %212 = getelementptr inbounds i8, i8* %209, i64 %211
  %213 = call i64 @strlen(i8* %212)
  %214 = trunc i64 %213 to i32
  %215 = load i32, i32* %7, align 4
  %216 = add nsw i32 %215, %214
  store i32 %216, i32* %7, align 4
  %217 = load i32, i32* %4, align 4
  %218 = urem i32 %217, 10
  store i32 %218, i32* %4, align 4
  br label %219

219:                                              ; preds = %195, %178
  %220 = load i32, i32* %4, align 4
  %221 = icmp ugt i32 %220, 0
  br i1 %221, label %222, label %257

222:                                              ; preds = %219
  %223 = load i32, i32* %7, align 4
  %224 = icmp ne i32 %223, 0
  br i1 %224, label %225, label %236

225:                                              ; preds = %222
  %226 = load i32, i32* %7, align 4
  %227 = load i32, i32* %6, align 4
  %228 = sub nsw i32 %227, 1
  %229 = icmp slt i32 %226, %228
  br i1 %229, label %230, label %236

230:                                              ; preds = %225
  %231 = load i8*, i8** %5, align 8
  %232 = load i32, i32* %7, align 4
  %233 = add nsw i32 %232, 1
  store i32 %233, i32* %7, align 4
  %234 = sext i32 %232 to i64
  %235 = getelementptr inbounds i8, i8* %231, i64 %234
  store i8 32, i8* %235, align 1
  br label %236

236:                                              ; preds = %230, %225, %222
  %237 = load i32, i32* %6, align 4
  %238 = load i32, i32* %7, align 4
  %239 = sub nsw i32 %237, %238
  %240 = load i8*, i8** %5, align 8
  %241 = load i32, i32* %7, align 4
  %242 = sext i32 %241 to i64
  %243 = getelementptr inbounds i8, i8* %240, i64 %242
  %244 = load i32, i32* %4, align 4
  %245 = zext i32 %244 to i64
  %246 = getelementptr inbounds [20 x i8*], [20 x i8*]* @speedtest1_numbername.ones, i64 0, i64 %245
  %247 = load i8*, i8** %246, align 8
  %248 = call i32 (i32, i8*, i8*, ...) @sqlite3_snprintf(i32 %239, i8* %243, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.33, i64 0, i64 0), i8* %247)
  %249 = load i8*, i8** %5, align 8
  %250 = load i32, i32* %7, align 4
  %251 = sext i32 %250 to i64
  %252 = getelementptr inbounds i8, i8* %249, i64 %251
  %253 = call i64 @strlen(i8* %252)
  %254 = trunc i64 %253 to i32
  %255 = load i32, i32* %7, align 4
  %256 = add nsw i32 %255, %254
  store i32 %256, i32* %7, align 4
  br label %257

257:                                              ; preds = %236, %219
  %258 = load i32, i32* %7, align 4
  %259 = icmp eq i32 %258, 0
  br i1 %259, label %260, label %277

260:                                              ; preds = %257
  %261 = load i32, i32* %6, align 4
  %262 = load i32, i32* %7, align 4
  %263 = sub nsw i32 %261, %262
  %264 = load i8*, i8** %5, align 8
  %265 = load i32, i32* %7, align 4
  %266 = sext i32 %265 to i64
  %267 = getelementptr inbounds i8, i8* %264, i64 %266
  %268 = call i32 (i32, i8*, i8*, ...) @sqlite3_snprintf(i32 %263, i8* %267, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %269 = load i8*, i8** %5, align 8
  %270 = load i32, i32* %7, align 4
  %271 = sext i32 %270 to i64
  %272 = getelementptr inbounds i8, i8* %269, i64 %271
  %273 = call i64 @strlen(i8* %272)
  %274 = trunc i64 %273 to i32
  %275 = load i32, i32* %7, align 4
  %276 = add nsw i32 %275, %274
  store i32 %276, i32* %7, align 4
  br label %277

277:                                              ; preds = %260, %257
  %278 = load i32, i32* %7, align 4
  ret i32 %278
}

declare dso_local i32 @sqlite3_snprintf(i32, i8*, i8*, ...) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
